--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,8 @@
 		"wp-coding-standards/wpcs": "^3.0",
 		"sirbrillig/phpcs-variable-analysis": "^2.11",
 		"squizlabs/php_codesniffer": "^3.7",
-		"wpackagist-plugin/create-block-theme": "2.7.0"
+		"wpackagist-plugin/create-block-theme": "2.7.0",
+		"wpackagist-plugin/wordpress-importer":"0.9.0"
 	},
 	"extra": {
 		"installer-paths": {
